# vipyrdocs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: macos-universal.yml
src/: constants.rs  docstring.rs  lib.rs  main.rs  plugin.rs  rule_engine.rs  test_rule_engine.rs
src/ruff_docstrings_complete/: __init__.py
src/test_rule_engine/: test_rule_20.rs  test_rule_21.rs  test_rule_22.rs  test_rule_23.rs  test_rule_24.rs  test_rule_25.rs  test_rule_2x.rs  test_rule_40.rs  test_rule_41.rs  test_rule_42.rs  test_rule_50.rs  test_rule_51.rs  test_rule_52.rs  test_rule_53.rs  test_rule_54.rs  test_rule_55.rs  test_rule_56.rs  test_rule_5x.rs  test_rule_60.rs
tests/python_tests/: __init__.py  test_docstring.py
tests/python_tests/integration/: test___init__.py
tests/python_tests/unit/: result.py  test___init__.py  test___init__args.py  test___init__attrs.py  test___init__raises.py
tests/sample_files/: no_attr_in_docs.py  no_function_docstring.py
