[package]
name = "vipyrdocs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
[[bin]]
name = "vipyrdocs"
path = "src/main.rs"  # Adjust if your binary source file is elsewhere

[dependencies]
lazy_static = "1.5.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
regex = "1.11.1"
rustpython-ast = { version = "0.4.0", features = ["visitor"] }
rustpython-parser = "0.4.0"
rstest = "0.25.0"
clap = { version = "4.5", features = ["derive"] }
